--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,7 +4,8 @@
 :root {
     --primary: #fe2c55;
     --black: #000;
-    --text-color: #333;
+    --text-color: #rgb(22, 24, 35);
+    --white: #fff;
 
     // Default layout
     --default-layout-header-height: 60px;
@@ -22,7 +23,7 @@ html {
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'IBM Plex Sans';
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
