--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,20 @@
 .wrapper {
     --search-border-radius: 92px;
     --search-height: 46px;
+    --search-width: 500px;
     --search-top-spacer: 9px;
     --search-button-width: 52px;
-    width: 100%;
-    height: var(--default-layout-header-height, 60px);
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
+    justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px;
+    background-color: var(--white);
 }
 
 .inner {
@@ -22,84 +30,53 @@
     height: 42px;
 }
 
-.search,
-.search-result {
-    width: 500px;
-}
-
-.search {
-    position: relative;
-    height: var(--search-height);
-    padding-left: 16px;
-    background: rgba(22, 24, 35, 0.06);
-    border-radius: var(--search-border-radius);
+.logo-link {
     display: flex;
-    border: 1px solid transparent;
-
-    input {
-        font-family: 'IBM Plex Sans', sans-serif;
-        flex: 1;
-        height: 100%;
-        color: var(--text-color);
-        font-size: 1.6rem;
-        background-color: transparent;
-        caret-color: var(--primary);
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-        width: 1px;
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        background-color: rgba(22, 24, 35, 0.12);
-    }
-
-    &:hover {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-
-    &:hover > .search-btn {
-        background-color: rgba(22, 24, 35, 0.06);
-        color: rgba(22, 24, 35);
-    }
-
-    &:focus-within {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
+}
+// Actions
+.actions {
+    display: flex;
+    align-items: center;
 }
 
-.search-title {
-    height: 30px;
-    padding: 5px 12px;
+// More
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    background-color: transparent;
+    padding: 4px 8px;
+    cursor: pointer;
+}
+
+.action-btn {
+    position: relative;
+    display: flex;
+    font-size: 2.2rem;
+    color: var(--text-color);
+    background-color: transparent;
+    padding: 4px 10px;
+    cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
     font-size: 1.4rem;
     font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
+    color: var(--white);
+    font-family: var(--font-family);
+    background-color: var(--primary);
 }
 
-.clear,
-.loading {
-    color: rgba(22, 24, 35, 0.34);
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
-
-    &:hover {
-        cursor: pointer;
-    }
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 999px;
+    cursor: pointer;
 }
