--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    display: flex;
+    flex-direction: column;
     padding-top: 8px;
     width: 100%;
     background: rgb(255, 255, 255);
