--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -16,6 +16,7 @@
         font-family: var(--font-family);
         flex: 1;
         height: 100%;
+        padding-right: 40px;
         color: var(--text-color);
         font-size: 1.6rem;
         background-color: transparent;
